--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -32,5 +33,5 @@ build/
 ### VS Code ###
 .vscode/
 
-**/src/main/resources/keystore.p12
-**/src/main/resources/application.properties
+/src/main/resources/application.properties
+/src/main/resources/keystore.p12
